--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "pretty-check": "npx prettier --check --config .prettierrc \"lib/ts/**/*.ts\" \"lib/build/**/*.js\" \"TestingApp/test/**/*.js\" \"examples/**/*.js\"",
     "set-up-hooks": "cp hooks/pre-commit.sh .git/hooks/pre-commit && chmod +x .git/hooks/pre-commit",
     "build-docs": "rm -rf ./docs && npx typedoc --out ./docs --tsconfig ./lib/tsconfig.json ./lib/ts/index.ts",
-    "size": "size-limit"
+    "size": "size-limit",
+    "postinstall": "rm -rf ./.circleci ./.github ./android ./docs ./examples ./hooks ./ios ./test ./TestingApp"
   },
   "repository": {
     "type": "git",
@@ -33,22 +34,21 @@
   "homepage": "https://github.com/supertokens/supertokens-react-native#readme",
   "peerDependencies": {
     "axios": "*",
-    "react-native": ">=0.61.5 <1.0.x",
-    "@react-native-async-storage/async-storage": ">=1.13.0 <2.0.x"
+    "react-native": ">=0.61.5 <1.0.x"
   },
   "devDependencies": {
-    "@react-native-async-storage/async-storage": "^1.13.0",
     "@size-limit/preset-small-lib": "^6.0.4",
     "@types/base-64": "^1.0.0",
     "@types/react-native": "0.62.0",
     "axios": "*",
     "prettier": "1.18.2",
     "size-limit": "^6.0.4",
-    "typescript": "3.8.3",
-    "typedoc": "^0.22.5"
+    "typedoc": "^0.22.5",
+    "typescript": "3.8.3"
   },
   "dependencies": {
     "base-64": "^1.0.0",
+    "react-native-mmkv-storage": "^0.9.1",
     "react-native-url-polyfill": "^1.3.0",
     "supertokens-js-override": "^0.0.4"
   },
